--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
     <title>NTM Scoreboard Tool</title>
+    <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <style>
+      body {
+        font-family: 'Roboto', sans-serif;
+        border: 0;
+        outline: 0;
+        color: #fff;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
